--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <script>window.location.href="slides.html"</script>
         <meta charset="utf-8">
         <title>html5</title>
     </head>
     <body>
         <ul>
+            <li><a href="cnug2013-slides.html">Slides Copenhagen .NET User Group 2013</a></li>
             <li><a href="osd2013-slides.html">Slides open source days 2013</a></li>
         </ul>
     </body>
