--- a/cnug2013-slides.html
+++ b/cnug2013-slides.html
@@ -99,6 +99,14 @@
                 </section>
 
                 <section>
+                <h3>Building a photo booth</h3>
+                Minimal HTML5, Video playback, Canvas,<br>
+                CSS3 animations, Video capture, Fullscreen<br>
+                Pixel access and typed arrays, Local Storage<br>
+                Microdata and editable content
+                </section>
+
+                <section>
                 <h3>Minimal HTML5 document</h3>
                 <pre style="font-size: 36px;"><code style="width: 100%">&lt;!DOCTYPE html>
 &lt;html>
@@ -241,7 +249,7 @@ function shot() {
                 <section>
                 <h3>State of the art</h3>
                 <p>Unreal Engine: 1+MLoC C++ code<br> ported to HTML5 in 4 days.</p>
-                <video src=demo.ogv autoplay loop>
+                <video src=demo.ogv autoplay loop controls>
                 </video>
                 </section>
 
